--- a/otter-rpg-engine/otter-rpg-engine.csproj
+++ b/otter-rpg-engine/otter-rpg-engine.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Engine</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SFML.Net" Version="2.5.0" />
+  </ItemGroup>
+
 </Project>
