--- a/otter-rpg/otter-rpg.csproj
+++ b/otter-rpg/otter-rpg.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>OtterRPG</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\otter-rpg-engine\otter-rpg-engine.csproj" />
+  </ItemGroup>
 
 </Project>
