--- a/TestProgram/TestProgram.csproj
+++ b/TestProgram/TestProgram.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\otter-rpg-engine\ShellbladeEngine.csproj" />
+    <ProjectReference Include="..\ShellbladeEngine\ShellbladeEngine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
