Added cross platform post build python script (test on win)

--- a/TestProgram/TestProgram.csproj
+++ b/TestProgram/TestProgram.csproj
@@ -16,4 +16,8 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="python post_build.py $(ProjectDir) $(TargetDir)" />
+  </Target>
+
 </Project>
