--- a/TestProgram/TestProgram.csproj
+++ b/TestProgram/TestProgram.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="python post_build.py $(ProjectDir) $(TargetDir)" />
+    <Exec Command="python ../post_build.py $(ProjectDir) $(TargetDir)" />
   </Target>
 
 </Project>
