--- a/UIBuilder/UIBuilder.csproj
+++ b/UIBuilder/UIBuilder.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\ShellbladeEngine\ShellbladeEngine.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="python ../post_build.py $(ProjectDir) $(TargetDir)" />
+  </Target>
+
 </Project>
