--- a/ShellbladeEngine/ShellbladeEngine.csproj
+++ b/ShellbladeEngine/ShellbladeEngine.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="SFML.Net" Version="2.5.0" />
     <PackageReference Include="YamlDotNet" Version="9.1.4" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
