I'm still bad at pushing

--- a/ShellbladeEngine/ShellbladeEngine.csproj
+++ b/ShellbladeEngine/ShellbladeEngine.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Shellblade</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
