--- a/ShellbladeEngine/ShellbladeEngine.csproj
+++ b/ShellbladeEngine/ShellbladeEngine.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Shellblade</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="OpenTK" Version="4.7.1" />
     <PackageReference Include="SFML.Net" Version="2.5.0" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
